--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,6 +5,8 @@ sphinx:
 python:
   version: 3.8
   install:
-    - method: setuptools
+    - method: pip
       path: components/google-cloud
+    - extra_requirements:
+      - sdk/python
 
