--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,6 +7,6 @@ python:
   install:
     - method: pip
       path: components/google-cloud
-    - extra_requirements:
-      - sdk/python
+      extra_requirements:
+        - sdk/python
 
