--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,6 +7,8 @@ python:
   install:
     - method: pip
       path: components/google-cloud
+    - method: pip
+      path: .
       extra_requirements:
         - sdk/python
 
