improve gcpc v1 404 page (#9643)

--- a/components/google-cloud/docs/.readthedocs.yml
+++ b/components/google-cloud/docs/.readthedocs.yml
@@ -7,3 +7,4 @@ python:
   install:
     - method: setuptools
       path: components/google-cloud
+    - requirements: components/google-cloud/docs/requirements.txt
