--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,4 +7,4 @@ python:
   install:
     - method: setuptools
       path: components/google-cloud
-
+    - requirements: components/google-cloud/docs/requirements.txt
