--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,8 +1,11 @@
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 version: 2
 sphinx:
-  configuration: docs/conf.py
+  configuration: components/google-cloud/docs/source/conf.py
 python:
   version: 3.7
   install:
-    - requirements: docs/requirements.txt
+    - method: pip
+      path: components/google-cloud
+      extra_requirements:
+        - docs
