fix(components): fix parent_model ignored in ModelUploadOp (#9725)

--- a/components/google-cloud/google_cloud_pipeline_components/v1/model/upload_model/component.yaml
+++ b/components/google-cloud/google_cloud_pipeline_components/v1/model/upload_model/component.yaml
@@ -109,6 +109,6 @@ implementation:
       --executor_input, "{{$}}",
       {if: {
           cond: {isPresent: parent_model},
-          then: [concat: ["--parent_model_name ", "{{$.inputs.artifacts['parent_model'].metadata['resourceName']}}",]]
+          then: ["--parent_model_name", "{{$.inputs.artifacts['parent_model'].metadata['resourceName']}}",]
       }}
     ]
