chore: bump to v3.0.0, revamp CI for consolidated package
- Bump version from 2.15.2 to 3.0.0
- Raise minimum Python from 3.9 to 3.10
- Rename CI actions (remove kfp-pipeline-spec/kfp-kubernetes refs)
- Install kfp with [all] extras in CI
- Update Python matrix to 3.10-3.13 across all workflows
- Simplify test scripts (remove redundant pip installs)
- Modernize requirements-dev.txt (pytest 8, mypy 1.15, pylint 3)
- Remove duplicate protobuf step in sdk-component-yaml.yml

--- a/.github/actions/kfp-k8s/action.yml
+++ b/.github/actions/kfp-k8s/action.yml
@@ -1,5 +1,5 @@
-name: "Install kfp & kfp-kubernetes"
-description: "Install kfp & kfp-kubernetes"
+name: "Build & Install KFP"
+description: "Build and install the consolidated kfp package from source"
 inputs:
   build_version:
     required: true
@@ -36,4 +36,4 @@ runs:
       run: |
         rm -rf dist/
         python -m build .
-        pip install dist/*.whl
+        pip install "dist/*.whl[all]"
