--- a/.github/workflows/kfp-kubernetes-library-test.yml
+++ b/.github/workflows/kfp-kubernetes-library-test.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       matrix:
         python: [
-          { 'version': '3.9' },
+          { 'version': '3.10' },
           { 'version': '3.13' }
         ]
     steps:
@@ -31,11 +31,11 @@ jobs:
           python-version: ${{matrix.python.version}}
           cache: 'pip'
 
-      - name: Install protobuf dependencies & kfp-pipeline-spec
+      - name: Generate proto files
         id: install-protobuf-deps
         uses: ./.github/actions/protobuf
 
-      - name: Install kfp & kfp-kubernetes from source
+      - name: Build & install kfp
         id: install-kfp-k8s-deps
         uses: ./.github/actions/kfp-k8s
 
