--- a/.github/workflows/kfp-sdk-client-tests.yml
+++ b/.github/workflows/kfp-sdk-client-tests.yml
@@ -69,22 +69,19 @@ jobs:
         run: ./.github/resources/scripts/forward-port.sh "kubeflow" "ml-pipeline" 8888 8888
         continue-on-error: true
 
-      - name: Install protobuf dependencies & kfp-pipeline-spec
+      - name: Generate proto files
         if: ${{ steps.forward-api-port.outcome == 'success' }}
         id: install-protobuf-deps
         uses: ./.github/actions/protobuf
 
-      - name: Install kfp & kfp-kubernetes from source
+      - name: Build & install kfp
         if: ${{ steps.install-protobuf-deps.outcome == 'success' }}
         id: install-kfp-k8s-deps
         uses: ./.github/actions/kfp-k8s
 
       - name: Install Test dependencies
         run: |
-          pip install -r sdk/python/requirements.txt
           pip install -r sdk/python/requirements-dev.txt
-          pip install pytest
-          pip install pytest-cov
 
       - name: Run tests
         id: tests
