--- a/.github/workflows/kfp-sdk-tests.yml
+++ b/.github/workflows/kfp-sdk-tests.yml
@@ -23,7 +23,7 @@ jobs:
     timeout-minutes: 45
     strategy:
       matrix:
-        python-version: ['3.9', '3.13']
+        python-version: ['3.10', '3.13']
 
     steps:
     - name: Checkout code
@@ -35,22 +35,18 @@ jobs:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
 
-    - name: Install protobuf dependencies & kfp-pipeline-spec
+    - name: Generate proto files
       id: install-protobuf-deps
       uses: ./.github/actions/protobuf
 
-    - name: Install kfp & kfp-kubernetes from source
+    - name: Build & install kfp
       id: install-kfp-k8s-deps
       uses: ./.github/actions/kfp-k8s
 
     - name: Install Test dependencies
       run: |
         pip install -r sdk/python/requirements-dev.txt
-        pip install pytest
-        pip install docker
-        pip install pytest-cov
         pip install google_cloud_pipeline_components
-        pip install requests==2.28.1
 
     - name: Run SDK Tests
       env:
