--- a/.github/workflows/readthedocs-builds.yml
+++ b/.github/workflows/readthedocs-builds.yml
@@ -24,11 +24,11 @@ jobs:
           python-version: "3.10"
           cache: 'pip'
 
-      - name: Install protobuf dependencies & kfp-pipeline-spec
+      - name: Generate proto files
         id: install-protobuf-deps
         uses: ./.github/actions/protobuf
 
-      - name: Install kfp & kfp-kubernetes from source
+      - name: Build & install kfp
         id: install-kfp-k8s-deps
         uses: ./.github/actions/kfp-k8s
 
