--- a/.github/workflows/validate-generated-files.yml
+++ b/.github/workflows/validate-generated-files.yml
@@ -39,16 +39,16 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
-          python-version: 3.9
+          python-version: '3.10'
           cache: 'pip'
 
-      - name: Install protobuf dependencies & kfp-pipeline-spec
+      - name: Generate proto files
         id: install-protobuf-deps
         uses: ./.github/actions/protobuf
         with:
           generate_golang_proto: "true"
 
-      - name: Install kfp & kfp-kubernetes from source
+      - name: Build & install kfp
         id: install-kfp-k8s-deps
         uses: ./.github/actions/kfp-k8s
         with:
