fix: resolve wheel glob before appending [all] extras

--- a/.github/actions/kfp-k8s/action.yml
+++ b/.github/actions/kfp-k8s/action.yml
@@ -36,4 +36,5 @@ runs:
       run: |
         rm -rf dist/
         python -m build .
-        pip install "dist/*.whl[all]"
+        WHL=$(ls dist/*.whl)
+        pip install "${WHL}[all]"
