--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,5 @@
+exclude: ^backend/api/(v1beta1|v2beta1)/python_http_client/
+
 repos:
   # other fast helpful checks
   - repo: https://github.com/pre-commit/pre-commit-hooks
