chore(frontend): add React peer compatibility gate (#12881)
* chore(frontend): add React peer gate and 18/19 upgrade plan

Signed-off-by: Jeff Spahr <spahrj@gmail.com>

* fix(frontend): improve JSON parse errors in peer check script

Signed-off-by: Jeff Spahr <spahrj@gmail.com>

* refactor(frontend): use semver for React peer checks

Signed-off-by: Jeff Spahr <spahrj@gmail.com>

* fix(frontend): sync lockfile for semver override

Signed-off-by: Jeff Spahr <spahrj@gmail.com>

* docs(frontend): drop duplicated React upgrade plan

Signed-off-by: Jeff Spahr <spahrj@gmail.com>

* docs(frontend): remove superseded React 17 checklist

Signed-off-by: Jeff Spahr <spahrj@gmail.com>

* docs(frontend): tighten canonical React upgrade checklist

Signed-off-by: Jeff Spahr <spahrj@gmail.com>

---------

Signed-off-by: Jeff Spahr <spahrj@gmail.com>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,6 +74,9 @@
     "docker": "COMMIT_HASH=`git rev-parse HEAD`; docker build -q -t ml-pipelines-frontend:${COMMIT_HASH} --build-arg COMMIT_HASH=${COMMIT_HASH} --build-arg DATE=\"`date -u`\" -f Dockerfile ..",
     "format": "prettier --write './**/*.{ts,tsx}'",
     "format:check": "prettier --check './**/*.{ts,tsx}' || node ./scripts/check-format-error-info.js",
+    "check:react-peers": "node scripts/check-react-peers.mjs --target 17",
+    "check:react-peers:18": "node scripts/check-react-peers.mjs --target 18",
+    "check:react-peers:19": "node scripts/check-react-peers.mjs --target 19",
     "java": "java -version",
     "lint": "eslint --ext js,ts,tsx src --max-warnings=0",
     "typecheck": "tsc --noEmit",
@@ -99,7 +102,7 @@
     "visual:diff": "node scripts/visual-compare.mjs diff --baseline-dir .visual/baseline --current-dir .visual/current --diff-dir .visual/diff --report .visual/report.html",
     "test:server:coverage": "cd ./server && npm test -- --coverage && cd ..",
     "test:coverage": "npm run test:ui:coverage && npm run test:server:coverage",
-    "test:ci": "export CI=true && npm run format:check && npm run lint && npm run typecheck && npm run test:coverage",
+    "test:ci": "export CI=true && npm run format:check && npm run lint && npm run typecheck && npm run check:react-peers && npm run test:coverage",
     "storybook": "start-storybook -p 6006 -s public",
     "build:storybook": "build-storybook -s public"
   },
@@ -159,6 +162,7 @@
     "prettier": "1.19.1",
     "react-test-renderer": "^17.0.2",
     "rollup-plugin-visualizer": "^5.12.0",
+    "semver": "^7.7.4",
     "snapshot-diff": "^0.6.1",
     "style-loader": "^3.3.4",
     "swagger-ts-client": "^0.9.6",
